--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="icon.png">
     <title>Privacy Policy - AssetFlow</title>
     <style>
         * {
@@ -40,15 +41,9 @@
         .logo-icon {
             width: 40px;
             height: 40px;
-            background: linear-gradient(135deg, #6C63FF, #BB86FC);
             border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 700;
-            font-size: 18px;
-            color: #FFFFFF;
             flex-shrink: 0;
+            object-fit: cover;
         }
 
         .header-text h1 {
@@ -300,7 +295,7 @@
 
     <div class="header">
         <div class="header-content">
-            <div class="logo-icon">AF</div>
+            <img class="logo-icon" src="icon.png" alt="AssetFlow">
             <div class="header-text">
                 <h1>AssetFlow</h1>
                 <p>Privacy Policy</p>
